--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,9 @@
+dist/
+bin/build/umdPlugin.js
+src/E/lru-cache.ts
+documentation/production/
+src/E/
+
 # Logs
 logs
 *.log
@@ -89,7 +95,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-# dist
 
 # Gatsby files
 .cache/
