--- a/package.json
+++ b/package.json
@@ -31,15 +31,20 @@
     "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
+    "class-transformer": "^0.5.1",
     "concurrently": "^8.2.2",
     "esbuild": "^0.21.3",
     "esbuild-plugin-replace": "^1.4.0",
     "eslint": "^8.57.0",
     "eslint-plugin-jsdoc": "^48.2.5",
+    "lz-string": "^1.5.0",
+    "md5": "^2.3.0",
     "pixi.js": "^8.1.3",
-    "typescript": "^5.4.5"
+    "reflect-metadata": "^0.2.2",
+    "typescript": "^5.4.5",
+    "yy-intersects": "^1.0.8"
   },
   "dependencies": {
-    "emath.js": "^8.3.0"
+    "emath.js": "^8.4.0"
   }
 }
